--- a/src/templates/web/inicio.html
+++ b/src/templates/web/inicio.html
@@ -54,7 +54,7 @@
 <section class="text-center py-16 px-4 bg-[#FFF3E0] rounded-xl shadow max-w-5xl mx-auto">
   <h3 class="text-2xl font-bold text-[#37474F] mb-4">¿Querés trabajar con nosotros?</h3>
   <p class="text-[#37474F] mb-6 text-base md:text-lg">Ya sea que tengas una idea, un negocio o necesites una solución específica, estamos listos para ayudarte.</p>
-  <a href="#" class="inline-block bg-[#FF9800] hover:bg-[#FFC107] text-white font-medium px-6 py-3 rounded-lg transition">
+  <a href="{% url "contacto" %}" class="inline-block bg-[#FF9800] hover:bg-[#FFC107] text-white font-medium px-6 py-3 rounded-lg transition">
     Contactanos
   </a>
 </section>
